[build-system]
requires = ["pip>=24.3.1",
    "setuptools>=80.9.0",
    "wheel>=0.45.1"]

build-backend = "setuptools.build_meta"

[project]
name = "sb_db_common"
readme = "README.md"
urls = { "homepage" = "https://github.com/sboothza/dbcommon" }
version = "0.1.1"
authors = [
    { name = "Stephen Booth", email = "stephen.booth.za@gmail.com" },
]
description = "A set of db wrappers"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["psycopg2-binary >= 2.9.10",
    "mysql-connector-python >= 9.4.0",
    "pymssql >= 2.3.7",
    "protobuf >= 6.32.1"]

